Organize Raspberry Pi inference service files into dedicated directory
- Move all Pi-specific files to pi-inference directory
- Update import paths to work with new directory structure
- Update documentation to reflect new paths
- Add comprehensive README for the Pi package
- Update systemd service configuration to use module path

--- a/pi-inference/.env.pi.example
+++ b/pi-inference/.env.pi.example
@@ -3,7 +3,10 @@ SECRET_KEY=your-secret-key-here
 SESSION_SECRET_KEY=your-session-secret-here
 CSRF_SECRET_KEY=your-csrf-secret-here
 
-# Database and directories
+# Database path (for shared database access)
+DATABASE_PATH=/home/pi/pawikan-sentinel/pawikan.db
+
+# Directory paths
 DETECTIONS_DIR=/home/pi/pawikan-sentinel/detections
 
 # Roboflow configuration
