--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "uvicorn==0.23.2",
     "python-jose[cryptography]==3.3.0",
     "passlib[bcrypt]==1.7.4",
-    "inference-sdk",
+#    "inference-sdk",
     "numpy<2",
     "opencv-python",
     "python-dotenv",
