--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 pillow==10.0.1
 opencv-python==4.8.1.78
-inference-sdk==0.9.12
+inference-sdk==0.9.12passlib[bcrypt]
