Pivot SMS API gateway from Semaphore to IPROG

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-# Semaphore SMS Configuration (replaces Twilio)
-SEMAPHORE_API_KEY=your_semaphore_api_key_here
-SEMAPHORE_SENDER_NAME=PawikanSentinel
+# iprog SMS Configuration (replaces Semaphore)
+IPROG_API_TOKEN=your_iprog_api_token_here
+IPROG_SENDER_NAME=PawikanSentinel
 
-# For backward compatibility - will be ignored when using Semaphore
-# TWILIO_ACCOUNT_SID=ignored_when_using_semaphore
-# TWILIO_AUTH_TOKEN=ignored_when_using_semaphore
-# TWILIO_PHONE_NUMBER=ignored_when_using_semaphore
+# For backward compatibility - will be ignored when using iprog
+# SEMAPHORE_API_KEY=ignored_when_using_iprog
+# SEMAPHORE_SENDER_NAME=ignored_when_using_iprog
+# TWILIO_ACCOUNT_SID=ignored_when_using_iprog
+# TWILIO_AUTH_TOKEN=ignored_when_using_iprog
+# TWILIO_PHONE_NUMBER=ignored_when_using_iprog
 
 # SMS Notification Cooldown (in minutes)
 SMS_NOTIFICATION_COOLDOWN=10
