--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,14 @@ fastapi==0.103.2
 uvicorn==0.23.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-slowapi==0.1.7
-python-multipart==0.0.6
-python-dotenv==1.0.0
-pillow==10.0.1
+numpy==1.26.4
 opencv-python==4.8.1.78
-inference-sdk==0.9.12passlib[bcrypt]
+python-dotenv==1.0.0
+httpx==0.25.2
+jinja2==3.1.2
+itsdangerous==2.2.0
+python-multipart==0.0.20
+slowapi==0.1.9
+inference-cli==0.45.1
+inference==0.45.1
+websockets==11.0.3
